--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.platform=h2
 spring.datasource.jdbcUrl=jdbc:h2:mem:test
 spring.datasource.user=sa
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.database=H2
 spring.jpa.show-sql=true
